2007-05-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs,
	  libsteticui/PaletteBackend.cs, libsteticui/Project.cs: Added
	  support for internal widgets and internal widget libraries.
	  Internal widgets won't be shown in the palette unless the library
	  to which they belong is internal to the project.
	* libsteticui/Component.cs, libsteticui/ActionGroupComponent.cs,
	  libsteticui/WidgetComponent.cs: Added properties for changing the
	  GeneratePublic flag.
	* libstetic/ImageInfo.cs, libstetic/ProjectIconFactory.cs,
	  libstetic/GeneratorContext.cs: Added a GenerateLoadPixbuf method
	  which creates a pixbuf from a stock image name in safe way (it
	  won't crash if the image doesn't exist, but it will return a
	  'missing image' icon).
	* libstetic/wrapper/ActionGroup.cs: Allow generatic private action
	  groups.
	* libstetic/ClassDescriptor.cs: Added support for internal widgets.

2007-05-15  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ActionGroupDesigner.cs, libsteticui/ProjectBackend.cs,
	  libsteticui/WidgetInfoEventHandler.cs, libsteticui/Application.cs,
	  libsteticui/Project.cs, libsteticui/PluggableWidget.cs,
	  stetic/Stetic.cs, stetic/DesignerView.cs, stetic/UIManager.cs:
	  Implemented lazy loading of projects. Project widgets won't be
	  instantiated until necessary. The new WidgetInfo class allows
	  getting the list of toplevels in a project without having to
	  completely load it.
	* libsteticui/CecilSignalDescriptor.cs,
	  libsteticui/CecilPropertyDescriptor.cs,
	  libsteticui/LibraryCache.cs, libsteticui/CecilClassDescriptor.cs,
	  libsteticui/CecilWidgetLibrary.cs: Store parsed information in a
	  cache file. When loading the library again stetic will check if the
	  library has changed, and it if has not it will load widget info
	  from the cache file.
	* libsteticui/libsteticui.mdp, libsteticui/Makefile.am: Updated.