@@ -1,3 +1,10 @@
+2007-05-17  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libsteticui/WidgetActionBar.cs, libstetic/CommandDescriptor.cs: Fix
+	  bug about widget commands without an icon not being properly shown.
+	* libstetic/wrapper/Notebook.cs: Implemented Swap methods.
+	* libstetic/libstetic.mdp: Updated.
+
 2007-05-16  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs,
